--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>
         async function rollDice() {
             try {
-                let response = await fetch("https://roll-the-dice-aphtgkdfaffeejg2.uaenorth-01.azurewebsites.net/");
+                let response = await fetch("https://roll-the-dice-aphtgkdfaffeejg2.uaenorth-01.azurewebsites.net/roll-dice");
                 let data = await response.json();
                 document.getElementById("result").innerText = "Dice Result: " + data.result;
             } catch (error) {
@@ -22,5 +22,6 @@
             }
         }
     </script>
+    
 </body>
 </html>
